Correction css collapse lodging

--- a/src/Utils/Style/2.base/_base.scss
+++ b/src/Utils/Style/2.base/_base.scss
@@ -1,5 +1,4 @@
 * {
     color:$primary-color;
-    box-sizing: border-box;
     margin:0;
 }
