--- a/src/Utils/Style/2.base/_typography.scss
+++ b/src/Utils/Style/2.base/_typography.scss
@@ -48,9 +48,15 @@ nav {
     }
     h2{
         font-size: 18px;
+        font-weight: 400;
     }
 }
 
 .tags-element {
     font-size:14px;
+    font-weight: 400;
+}
+
+.lodging-profile p {
+    font-weight: 400;
 }
