--- a/src/Utils/Style/5.page/_lodging.scss
+++ b/src/Utils/Style/5.page/_lodging.scss
@@ -29,3 +29,7 @@
     padding: 5px 30px;
     border-radius: 12px;
 }
+
+.equipments {
+    color:green;
+}
